# inference_results_v0.7

./: .gitignore  README.md
closed/Altos/results/: submission_checker_log.txt
closed/Altos/systems/: T4x4_TRT72.json  T4x4_TRT72_Triton20.09.json  T4x4_TRT_Triton.json
closed/Atos/: README.md  results_metadata.json  results_summary.csv
closed/Atos/code/: 3d-unet-99.9  bert-99  dlrm-99  main.py
closed/Atos/results/: submission_checker_log.txt
closed/Atos/systems/: T4x2_TRT.json
closed/CentaurTechnology/: calibration.md  checklist.md
closed/CentaurTechnology/code/: ssd-small
closed/CentaurTechnology/measurements/: README.md  base.Dockerfile
closed/CentaurTechnology/results/: submission_checker_log.txt
closed/CentaurTechnology/systems/: 0.json
closed/Cisco/: test.md
closed/Cisco/results/: submission_checker_log.txt  submission_checker_log_full.txt
closed/Cisco/scripts/: generate_system_descriptions.py
closed/Cisco/systems/: T4x6_TRT.json  T4x6_TRT.json~  T4x6_TRT_Triton.json  system_descriptions.tsv
closed/DellEMC/: README.md  calibration.md
closed/DellEMC/results/: submission-checker_R640_6248R_VMwarevSphere7.0_openvino.txt  submission_checker_log.txt
closed/DellEMC/systems/: C4140_QuadroRTX6000x4_TRT.json  DSS8440_QuadroRTX6000x10_TRT.json  DSS8440_QuadroRTX8000x10_TRT.json  DSS8440_QuadroRTX8000x8_TRT.json  DSS8440_T4x12_TRT.json  DSS8440_T4x16_TRT.json  R640_6248R-openvino-2020.json  R640_6248R_VMwarevSphere7.0_openvino.json  R740_T4x4_TRT.json  R740_vT4x1_TRT.json  R740_vT4x4_TRT.json  R740xd8280M_openvino.json  R7515_T4x4_TRT.json  R7525_A100x2_TRT.json  R7525_A100x3_TRT.json  R7525_QuadroRTX8000x3_TRT.json  R7525_T4x8_TRT.json  XE2420_T4x4_TRT.json
closed/Dividiti/: calibration.md
closed/Dividiti/results/: submission_checker_log.txt
closed/Dividiti/systems/: aws-g4dn.4xlarge-openvino-2020.json  firefly-armnn-v20.08-neon.json  firefly-armnn-v20.08-opencl.json  firefly-tflite-v2.2.0-ruy.json  rpi4-armnn-v20.08-neon.json  rpi4-tflite-v2.2.0-ruy.json  rpi4coral-armnn-v20.08-neon.json  rpi4coral-tflite-v2.2.0-ruy.json  xavier-armnn-v20.08-neon.json  xavier-tensorrt-v6.0.json  xavier-tflite-v2.2.0-ruy.json  xavier-tflite-v2.3.0-ruy.json
closed/Fujitsu/: calibration.md
closed/Fujitsu/systems/: T4x4_TRT.json
closed/Gigabyte/: README.md
closed/Gigabyte/code/: main.py
closed/Gigabyte/results/: submission_checker_log.txt
closed/Gigabyte/systems/: GIGABYTE_G292-Z43_16xT4.json  system_descriptions.tsv
closed/IVATech/: README.md  calibration.md
closed/IVATech/code/resnet/v1/: CMakeLists.txt  IvaTPUQuerySampleLibrary.cpp  IvaTPUSystemUnderTest.cpp  IvaTPUSystemUnderTest.h  README.md  main.cpp  run_local.sh  run_test.sh  util.cpp  util.h
closed/IVATech/code/resnet/v1/conf/: user.conf
closed/IVATech/code/resnet/v1/imagenet/: CMakeLists.txt  ImageNetUtils.cpp  ImageNetUtils.h
closed/IVATech/code/resnet/v1/quantize/: compile.sh  make_calibration_set.py  quantize.sh  requirements.txt
closed/IVATech/code/resnet/v1/systems/: iva-fpga-1.json
closed/IVATech/code/resnet/v1/tests/: test_inference.cpp
closed/IVATech/systems/: iva-fpga-1.json
closed/Inspur/: FAQ.md  Makefile  README.md  calibration.md  performance_tuning_guide.md  results_summary.csv
closed/Inspur/code/: README.md
closed/Inspur/docker/: Dockerfile.build
closed/Inspur/results/: submission_checker_log.txt
closed/Inspur/scripts/: create_config_files.py  submission-checker-full.py  summarize_results.py  update_results.py  utils.py
closed/Inspur/systems/: DGX-A100_A100-SXM4x1_TRT.json  DGX-A100_A100-SXM4x8_TRT.json  T4x1_TRT.json  T4x20_TRT.json  T4x8_TRT.json  system_descriptions.tsv
closed/Intel/systems/: 1-node-2s-clx-mx-int8.json  1-node-2s-clx-ov-int8.json  1-node-2s-clx-tf-int8.json  1-node-4s-cpx-ov-bf16.json  1-node-4s-cpx-ov-int8.json  (+6 more)
closed/Lenovo/: Makefile  README.md  calibration.md  command_flags.md  lenovo_test.txt  performance_tuning_guide.md  submission_guide.md
closed/Mobilint/: README.md
closed/NVIDIA/: Makefile  README.md  results_metadata.json  results_summary.csv  submission_guide.md
closed/Neuchips/: README.md
open/Deci/: README.md  reproduce_deci_instructions.md  submission_checklist.md  writeups.md
open/DellEMC/: README.md  calibration.md  pruning.md  summary.csv
open/Inspur/: Makefile  README.md  results_summary.csv
open/NVIDIA/: Makefile  README.md  submission_guide.md
open/NVIDIA/code/bert/tensorrt_sparse/harness/: CMakeLists.txt
open/NVIDIA/code/bert/tensorrt_sparse/harness/harness_bert/: bert_core_vs.cc  bert_core_vs.h  bert_server.cc  bert_server.h  main_bert.cc
(+15158 files in other folders)
